# reku

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.ru.md  ab_test.py  autostart.py  backends.py  bench_backends.py  build.ps1  config.py  cuda_setup.py  diag.py  diag_halluc.py  diag_paste.py  dictate.py  gui.py  gui_theme.py  gui_widgets.py  install.ps1  make_ico.py  model_store.py  postprocess.py  pyproject.toml  render_preview.py  requirements.lock.txt  requirements.txt  selftest_pipeline.py  smoke_gui.py  test_backends.py  test_frozen_smoke.py  test_paths.py  test_postprocess.py  test_robustness.py  test_theme.py  test_transcribe_pipeline.py  tray.py  whisper_ptt.iss  whisper_ptt.spec
.github/workflows/: build-whisper-cpp.yml  release.yml
docs/superpowers/plans/: 2026-06-04-cross-platform-core.md  2026-07-04-phase2-openvino-igpu.md  2026-07-05-finish-refactor-reku.md
docs/superpowers/specs/: 2026-06-04-portable-exe-cross-platform-design.md  2026-07-04-phase2-openvino-igpu-design.md  2026-07-05-finish-refactor-reku-design.md
packaging/: build.ps1  reku.iss  reku.spec
reku/: __init__.py  __main__.py  autostart.py  backends.py  config.py  cuda_setup.py  dictate.py  gui.py  gui_theme.py  gui_widgets.py  model_store.py  postprocess.py  startlog.py  whisper_cpp.py
scripts/: ab_test.py  bench_backends.py  diag_halluc.py  make_ico.py  render_preview.py
tests/: selftest_pipeline.py  smoke_gui.py  test_backends.py  test_frozen_smoke.py  test_paths.py  test_postprocess.py  test_robustness.py  test_startup_log.py  test_theme.py  test_transcribe_pipeline.py  test_whisper_cpp.py
